add JEP356, JEP406 doc